[fix] mapper 변경 , 전체 리스트 별점 fix